--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.WebActivity"/>
+        <activity android:name=".activity.LoginActivity"/>
+        <activity android:name=".activity.DetailActivity"/>
     </application>
 
 </manifest>
