--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".activity.WebActivity"/>
         <activity android:name=".activity.LoginActivity"/>
         <activity android:name=".activity.DetailActivity"/>
+        <activity android:name=".activity.RegistActivity"/>
     </application>
 
 </manifest>
